🐛 fix styling on mozilla
fix options overlap and text overflow issue for long option labels

--- a/src/select/theme.scss
+++ b/src/select/theme.scss
@@ -1,102 +1,108 @@
 @import "../globals/_theme.scss";
 @import "../globals/animations.scss";
 @import "../globals/common.scss";
-
 :local(.select) {
-  box-sizing: border-box;
-  outline: none;
-  width: 200px;
-  border-radius: 2px;
-  display: flex;
-  flex-direction: column;
-  color: #6c757d;
-  @include customScroll();
+    box-sizing: border-box;
+    outline: none;
+    width: 200px;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    color: #6c757d;
+    @include customScroll();
 }
 
 :local(.menu) {
-  box-sizing: border-box;
-  display: none;
-  flex-direction: column;
-  width: 100%;
-  background-color: white;
-  max-height: 200px;
-  transition: max-height 0.3s ease-in-out;
-  box-shadow: 0 1px 1px 0 rgba(194, 194, 194, 0.5);
+    box-sizing: border-box;
+    display: none;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    background-color: white;
+    max-height: 200px;
+    transition: max-height 0.3s ease-in-out;
+    box-shadow: 0 1px 1px 0 rgba(194, 194, 194, 0.5);
 }
 
 :local(.option) {
-  width: 100;
-  min-height: fit-content;
-  padding: 2% 5%;
-  cursor: pointer;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  &:hover {
-    background-color: $input-active-item;
-  }
+    display: inline-flex;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: fit-content;
+    min-height: -moz-fit-content;
+    padding: 2% 5%;
+    cursor: pointer;
+    &:hover {
+        background-color: $input-active-item;
+    }
+    &>span {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
 }
 
 :local(.option-hover) {
-  background-color: $input-active-item;
+    background-color: $input-active-item;
 }
 
 :local(.show) {
-  overflow-y: auto;
-  display: flex;
+    overflow-y: auto;
+    display: flex;
 }
 
 :local(.selectInput) {
-  outline: none;
-  cursor: pointer;
-  display: flex;
-  height: 2em;
-  padding: 0 2%;
-  box-sizing: border-box;
-  flex-direction: row;
-  position: relative;
-  justify-content: space-between;
-  border-bottom: 2px solid #6c757d;
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    height: 2em;
+    padding: 0 2%;
+    box-sizing: border-box;
+    flex-direction: row;
+    position: relative;
+    justify-content: space-between;
+    border-bottom: 2px solid #6c757d;
 }
 
 :local(.arrow) {
-  border: none;
-  border-right: 2px solid grey;
-  border-bottom: 2px solid grey;
-  height: 5px;
-  width: 5px;
-  transition: 0.3s ease;
-  align-self: center;
+    border: none;
+    border-right: 2px solid grey;
+    border-bottom: 2px solid grey;
+    height: 5px;
+    width: 5px;
+    transition: 0.3s ease;
+    align-self: center;
 }
 
 :local(.down) {
-  transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 :local(.up) {
-  transform: rotate(-135deg);
+    transform: rotate(-135deg);
 }
 
 :local(.selected) {
-  cursor: pointer;
-  color: black;
-  font-size: 1em;
-  & > input {
-    background-color: transparent;
-    border: none;
-  }
+    cursor: pointer;
+    color: black;
+    font-size: 1em;
+    &>input {
+        background-color: transparent;
+        border: none;
+    }
 }
 
 :local(.border-animation) {
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    background-color: $primary-input-active-border !important;
-    height: 2px;
-    @include inputFocus();
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-  }
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        background-color: $primary-input-active-border !important;
+        height: 2px;
+        @include inputFocus();
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+    }
 }
